# radar-a-chepers

./: .bwconfig  .gitignore  AGENTS.md  Cargo.toml  Makefile  flake.nix  install.sh  start.sh
.direnv/: flake-profile-1-link  flake-profile-3-link
doc/schematic/: .gitignore  radar.kicad_prl  radar.kicad_pro  radar.kicad_sch
docs/: workflows.md
issues/: radar-a--p1a.json  rc-edm.1.json  rc-edm.10.json  rc-edm.2.json  rc-edm.3.json  rc-edm.4.json  rc-edm.5.json  rc-edm.6.json  rc-edm.7.json  rc-edm.8.json  rc-edm.9.json  rc-edm.json
radar/: Cargo.toml
radar/fixtures/ld2451/: README.md
radar/fixtures/ld2451/captures/: README.md
radar/src/: command.rs  ld2451.rs  lib.rs  radar_module.rs  rd03d.rs  selected_radar.rs  target.rs
scripts/: bw-tree  fly-secrets.sh
src/: command.rs  lib.rs  target.rs
uploader/: Cargo.toml  Dockerfile  README.md
uploader/.cargo/: config.toml
uploader/src/: actor.rs  config_channel.rs  fake_radar_reader.rs  infraction_recorder.rs  infraction_uploader.rs  lib.rs  main.rs  radar_reader.rs  uploader_logger.rs
web/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  fly.toml  mix.exs  plan.md
web/assets/css/: app.css
web/assets/js/: app.js
web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
web/lib/: radar_web.ex
web/lib/mix/tasks/: radar.fly_seed.ex
web/lib/radar/: application.ex  infraction.ex  infractions.ex  mock_s3_client.ex  photo.ex  photos.ex  qr_codes.ex  radar_config.ex  radar_configs.ex  radar_data.ex  release.ex  repo.ex  s3.ex  zip_stream.ex
web/lib/radar_web/: active_radar.ex  endpoint.ex  presence.ex  router.ex  telemetry.ex
web/lib/radar_web/channels/: radar_config_channel.ex  uploader_socket.ex
web/lib/radar_web/components/: admin_components.ex  core_components.ex  layouts.ex
web/lib/radar_web/components/layouts/: root.html.heex
web/lib/radar_web/controllers/: admin_download_controller.ex  auth_controller.ex  error_html.ex  error_json.ex  page_controller.ex  page_html.ex
web/lib/radar_web/controllers/api/: photo_controller.ex
web/lib/radar_web/controllers/dev/: mock_s3_controller.ex
web/lib/radar_web/controllers/page_html/: home.html.heex
web/lib/radar_web/live/: admin_auth.ex  admin_infractions_live.ex  admin_live.ex  admin_radar_config_live.ex  infraction_live.ex  infraction_live.html.heex  radar_live.ex  radar_live.html.heex
web/priv/repo/: seeds.exs
web/priv/repo/migrations/: 20250809223524_create_photos_and_infractions.exs  20250810115101_remove_datetime_taken.exs  20260214000000_create_radar_configs.exs  20260214203210_add_trigger_cooldown_to_radar_configs.exs  20260425000000_add_aperture_angle_to_radar_configs.exs  20260516000000_add_capture_paused_to_radar_configs.exs  20260628000000_add_device_type_to_radar_configs.exs
web/test/radar/: photos_test.exs  radar_configs_test.exs  zip_stream_test.exs
web/test/radar_web/channels/: radar_config_channel_test.exs
web/test/radar_web/controllers/: auth_controller_test.exs  error_html_test.exs  page_controller_test.exs
web/test/radar_web/live/: admin_live_test.exs  radar_live_test.exs
web/test/support/: channel_case.ex  conn_case.ex  mock_s3_client.ex
web/test/support/fixtures/: infractions_fixtures.ex  photos_fixtures.ex
(+1 files in other folders)
