[package]
name = "radar-a-chepers"
version = "0.1.0"
authors = ["Luper Rouch <luper.rouch@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
test = false
doctest = false
bench = false

[[bin]]
name = "radar-a-chepers"
path = "./src/bin/main.rs"
harness = false            # do not use the built in cargo test harness -> resolve rust-analyzer errors
test = false
doctest = false
bench = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45.2"
eyre = "0.6.12"
once_cell = "1.21.3"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
