[package]
name = "uploader"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
notify = "6.0.0"
clap = { version = "4.0", features = ["derive"] }
defmt-decoder = "1.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
xshell = "0.2.7"
duct = "1.1.0"
eyre = "0.6.12"
camino = "1.1.11"
tokio = { version = "1.47.1", features = ["test-util", "macros"] }
tracing = "0.1.41"
tokio-serial = "5.4.5"
tempfile = "3"
phoenix_channels_client = "0.1"
rand = "0.9"
